--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!-- Groq Highlight Section -->
-        <div class="mt-8 bg-gradient-to-br from-orange-50 to-red-50 dark:from-orange-900/20 dark:to-red-900/20 rounded-2xl p-6 border border-orange-200 dark:border-orange-700">
-          <div class="flex items-start gap-4">
-            <div class="w-12 h-12 bg-orange-600 rounded-xl flex items-center justify-center flex-shrink-0">
-              <i class="fas fa-bolt text-white text-lg"></i>
-            </div>
-            <div class="flex-1">
-              <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-2">
-                ⚡ Groq: سرعت شگفت‌<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fa" dir="rtl" x-data="themeSwitcher()" :class="{ 'dark': isDarkMode }" x-init="init()">
 <head>
   <meta charset="UTF-8" />
@@ -464,48 +456,78 @@
           </div>
         </div>
 
+        <!-- Groq Highlight Section -->
+        <div class="mt-8 bg-gradient-to-br from-orange-50 to-red-50 dark:from-orange-900/20 dark:to-red-900/20 rounded-2xl p-6 border border-orange-200 dark:border-orange-700">
+          <div class="flex items-start gap-4">
+            <div class="w-12 h-12 bg-orange-600 rounded-xl flex items-center justify-center flex-shrink-0">
+              <i class="fas fa-bolt text-white text-lg"></i>
+            </div>
+            <div class="flex-1">
+              <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-2">
+                ⚡ Groq: سرعت شگفت‌انگیز در تولید محتوا
+              </h4>
+              <p class="text-gray-600 dark:text-gray-400 mb-4">
+                با تکنولوژی LPU انقلابی، Groq سریع‌ترین پردازش هوش مصنوعی را ارائه می‌دهد - مناسب زمانی که هر ثانیه اهمیت دارد!
+              </p>
+              <div class="grid md:grid-cols-2 gap-4 text-sm">
+                <div class="space-y-2">
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-rocket text-orange-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">سرعت ۱۰ برابر سریع‌تر از رقبا</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-chart-line text-orange-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">Throughput بالا برای تولید انبوه</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-microchip text-orange-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">تکنولوژی LPU اختصاصی</span>
+                  </div>
+                </div>
+                <div class="space-y-2">
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-coins text-orange-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">هزینه کمتر به ازای هر token</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-clock text-orange-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">Latency فوق‌العاده پایین</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-brain text-orange-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">پشتیبانی از Llama، Mixtral و...</span>
+                  </div>
+                </div>
+              </div>
+              <div class="mt-4 p-3 bg-orange-100 dark:bg-orange-900/30 rounded-lg border border-orange-200 dark:border-orange-700">
+                <p class="text-sm text-orange-800 dark:text-orange-200">
+                  <i class="fas fa-lightbulb mr-2"></i>
+                  <strong>ایده‌آل برای:</strong> فروشگاه‌های بزرگ که روزانه صدها محصول جدید اضافه می‌کنند و نیاز به تولید سریع محتوا دارند.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- OpenRouter Highlight Section -->
-        <div class="mt-8 bg-gradient-to-br from-indigo-50 to-blue-50 dark:from-indigo-900/20 dark:to-blue-900/20 rounded-2xl p-6 border border-indigo-200 dark:border-indigo-700">
+        <div class="mt-6 bg-gradient-to-br from-indigo-50 to-blue-50 dark:from-indigo-900/20 dark:to-blue-900/20 rounded-2xl p-6 border border-indigo-200 dark:border-indigo-700">
           <div class="flex items-start gap-4">
             <div class="w-12 h-12 bg-indigo-600 rounded-xl flex items-center justify-center flex-shrink-0">
               <i class="fas fa-network-wired text-white text-lg"></i>
             </div>
             <div class="flex-1">
               <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-2">
-                چرا OpenRouter.ai انتخاب هوشمندی است؟
+                OpenRouter: دنیای بی‌انتهای مدل‌های AI
               </h4>
               <p class="text-gray-600 dark:text-gray-400 mb-4">
-                OpenRouter دسترسی یکپارچه به بیش از ۱۰۰ مدل هوش مصنوعی از برندهای مختلف را فراهم می‌کند
+                یک API، ۱۰۰+ مدل! از Claude تا GPT-4، از Llama تا Mixtral - همه در یک مکان
               </p>
-              <div class="grid md:grid-cols-2 gap-4 text-sm">
-                <div class="space-y-2">
-                  <div class="flex items-center gap-2">
-                    <i class="fas fa-check text-indigo-600"></i>
-                    <span class="text-gray-700 dark:text-gray-300">دسترسی به Claude، GPT-4، Llama و...</span>
-                  </div>
-                  <div class="flex items-center gap-2">
-                    <i class="fas fa-check text-indigo-600"></i>
-                    <span class="text-gray-700 dark:text-gray-300">قیمت‌گذاری شفاف و رقابتی</span>
-                  </div>
-                  <div class="flex items-center gap-2">
-                    <i class="fas fa-check text-indigo-600"></i>
-                    <span class="text-gray-700 dark:text-gray-300">یک API برای همه مدل‌ها</span>
-                  </div>
-                </div>
-                <div class="space-y-2">
-                  <div class="flex items-center gap-2">
-                    <i class="fas fa-check text-indigo-600"></i>
-                    <span class="text-gray-700 dark:text-gray-300">بدون محدودیت rate limit سخت</span>
-                  </div>
-                  <div class="flex items-center gap-2">
-                    <i class="fas fa-check text-indigo-600"></i>
-                    <span class="text-gray-700 dark:text-gray-300">پشتیبانی از مدل‌های open-source</span>
-                  </div>
-                  <div class="flex items-center gap-2">
-                    <i class="fas fa-check text-indigo-600"></i>
-                    <span class="text-gray-700 dark:text-gray-300">امکان تست رایگان مدل‌ها</span>
-                  </div>
-                </div>
+              <div class="flex flex-wrap gap-2 text-sm">
+                <span class="bg-indigo-100 dark:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 px-3 py-1 rounded-full">🧠 Claude 3.5</span>
+                <span class="bg-indigo-100 dark:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 px-3 py-1 rounded-full">⚡ GPT-4 Turbo</span>
+                <span class="bg-indigo-100 dark:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 px-3 py-1 rounded-full">🦙 Llama 3</span>
+                <span class="bg-indigo-100 dark:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 px-3 py-1 rounded-full">🔀 Mixtral</span>
+                <span class="bg-indigo-100 dark:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 px-3 py-1 rounded-full">+ ۹۵ مدل دیگر</span>
               </div>
             </div>
           </div>
