--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="p-4 space-y-2">
           <a @click="open=false" href="#features" class="block rounded-lg px-3 py-3 text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">ویژگی‌ها</a>
           <a @click="open=false" href="#how" class="block rounded-lg px-3 py-3 text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">چطور کار می‌کند؟</a>
-          <a @click="open=false" href="#demo" class="block rounded-lg px-3 py-3 text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">دمو</a>
+          <a @click="open=false" href="#demo" class="block rounded-lg px-3 py-3 text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">مقایسه هوش‌های مصنوعی</a>
           <a @click="open=false" href="#audience" class="block rounded-lg px-3 py-3 text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">مخاطبان</a>
           <a @click="open=false" href="#faq" class="block rounded-lg px-3 py-3 text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">سوالات</a>
           <div class="pt-2 border-t border-gray-200 dark:border-gray-600">
