--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="hidden md:flex items-center gap-3">
           <a href="https://miladsoltani.me/media/pushly/pushly.zip" class="px-4 py-2 rounded-lg border border-gray-300 dark:border-gray-700 hover:shadow transition-all">دانلود</a>
-          <a href="#contact" class="px-4 py-2 rounded-lg bg-brand-600 text-white hover:bg-brand-700 shadow-glow transition-all">مشاوره رایگان</a>
+          <a href="https://miladsoltani.me/media/pushly/pushly.pdf" class="px-4 py-2 rounded-lg bg-brand-600 text-white hover:bg-brand-700 shadow-glow transition-all">کتابچه توضیحات پوشلی</a>
           <button @click="toggle()" class="w-10 h-10 grid place-items-center rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors" title="تغییر تم">
             <i class="fas fa-sun" x-show="!isDarkMode"></i>
             <i class="fas fa-moon" x-show="isDarkMode" x-cloak></i>
@@ -721,7 +721,7 @@
             <i class="fab fa-github"></i>
           </a>
           
-          <a href="#" class="w-10 h-10 bg-gray-100 dark:bg-gray-800 rounded-lg flex items-center justify-center text-gray-600 dark:text-gray-400 hover:text-brand-600 dark:hover:text-brand-400 hover:bg-brand-50 dark:hover:bg-brand-900/20 transition-all">
+          <a href="https://t.me/pushly_support" class="w-10 h-10 bg-gray-100 dark:bg-gray-800 rounded-lg flex items-center justify-center text-gray-600 dark:text-gray-400 hover:text-brand-600 dark:hover:text-brand-400 hover:bg-brand-50 dark:hover:bg-brand-900/20 transition-all">
             <i class="fab fa-telegram"></i>
           </a>
         </div>
